Fix align text button center

--- a/src/modules/pending/fill/payments_pending_list.less
+++ b/src/modules/pending/fill/payments_pending_list.less
@@ -26,7 +26,7 @@
   .action-btn{
     width: 40%;
     .bd-button {
-      width: 100px;
+      width: 110px;
     }
     .col-md-3,.col-md-5{
       width: 15%;
@@ -85,7 +85,7 @@
   .action-btn{
     padding-bottom: 100px;
     .bd-button {
-      width: 100px;
+      width: 110px;
     }
     .col-xs-12{
       width: 100%;
